# rust_api_test_template

./: Cargo.toml
src/: main.rs
src/api/: user_api.rs
src/repository/: mongodb_repo.rs
