[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4.22"
dotenv = "0.15.0"
mongodb = "2.3.0"
serde = "1.0.144"
tokio = { version="1.21.1", features=["full"] }
uuid = "1.1.2"
